# mocky

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  agent_prompter.py  dynamic_ppt_generator.py  file_manager.py  index.html  main.py  markdown_parser.py  mkdocs.yml  ppt_generator.py  pyproject.toml  requirements.txt  sitemap.xml  template_lib.py  test_agent_prompter.py  test_main.py  test_template_lib.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pages.yml
agents/: index.html
contributing/: index.html
cross-platform/: index.html
docs/: agents.md  contributing.md  cross-platform.md  faq.md  getting-started.md  index.md  skill.md  templates.md  usage.md
faq/: index.html
getting-started/: index.html
scripts/: commit_step.py
search/: search_index.json
skill/: index.html
skills/mocky/: SKILL.md
src/mocky/: __init__.py  agent_prompter.py  automation.py  cli.py  dynamic_ppt_generator.py  file_manager.py  main.py  markdown_parser.py  ppt_generator.py  template_lib.py  test_agent_prompter.py
templates/: index.html
tests/: test_agent_prompter.py  test_main.py  test_ppt_generator.py  test_template_lib.py
usage/: index.html
website/: guide.html  index.html
website/assets/css/: style.css
